fixed spacing between ceremony and reception

--- a/public/css/lib.css
+++ b/public/css/lib.css
@@ -8218,7 +8218,10 @@ h2 {
 /* line 22, ../sass/partials/_typography.scss */
 .month {
   text-transform: uppercase;
-  font-size: 22px;
+  font-size: 14px;
+    margin:2px;
+    font-family: "Erato Light";
+    padding:0px;
 }
 
 /* line 27, ../sass/partials/_typography.scss */
@@ -8283,7 +8286,7 @@ body {
 section:not(.hero) {
   position: relative;
   z-index: 2;
-  padding: 50px 0;
+  padding: 0px 0px 20px;
 }
 
 /* line 42, ../sass/partials/_layout.scss */
@@ -9040,6 +9043,7 @@ footer {
   clear: both;
   position: relative;
   z-index: 2;
+    
 }
 /* line 649, ../sass/partials/_layout.scss */
 footer p {
